@@ -6,8 +6,7 @@ import org.apache.tools.zip.ZipFile;
 import org.apache.tools.zip.ZipOutputStream;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
 
 import javax.imageio.ImageIO;
 import javax.imageio.stream.ImageInputStream;
@@ -1044,15 +1043,17 @@ public class FileUtil {
             if (content != null) content.close();
             if(out != null) out.close();
         }
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(out.toByteArray());
+      return   Base64.getEncoder().encode(out.toByteArray()).toString();
+//        BASE64Encoder encoder = new BASE64Encoder();
+//        return encoder.encode(out.toByteArray());
     }
 
     public static byte[] base64String2Image(String base64String) throws Exception{
         if(ComUtil.isEmpty(base64String)) return null;
         base64String = base64String.replaceAll("data:image/(jpg|png|jpeg);base64,","");
-        BASE64Decoder decoder = new BASE64Decoder();
-        return decoder.decodeBuffer(base64String);
+        return   Base64.getDecoder().decode(base64String);
+//        BASE64Decoder decoder = new BASE64Decoder();
+//        return decoder.decodeBuffer(base64String);
     }
 
 
